--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<title>Cool Background</title>
 </head>
 <body>
-	<h1>cool Background</h1>
+	<h1>COOL Background</h1>
 	<input class="color1" type="color">
 	<input class="color2" type="color">
 	<h2>Current css Background</h2>
